// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientAppUninstallConfirmation UninstallationsSuccessModal should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="ant-scrolling-effect"
    style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  >
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
    <div>
      <div
        class="rc-dialog-root"
      >
        <div
          class="rc-dialog-mask"
        />
        <div
          class="rc-dialog-wrap m140lwlu-modal-centered mhi5uvy-modal-no-padding"
          tabindex="-1"
        >
          <div
            aria-labelledby="test-id"
            aria-modal="true"
            class="rc-dialog m36ncwu-modal-container m1pyzxrx-modal-no-header"
            role="dialog"
          >
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
            <div
              class="rc-dialog-content"
            >
              <button
                aria-label="Close"
                class="rc-dialog-close"
                type="button"
              >
                <span
                  aria-label="close"
                  class="delete"
                />
              </button>
              <div
                class="rc-dialog-header"
              >
                <div
                  class="rc-dialog-title"
                  id="test-id"
                >
                  <h4
                    class="modal-card-title is-4 pt-2 pb-2"
                  />
                </div>
              </div>
              <div
                class="rc-dialog-body"
              >
                <div
                  class=""
                  data-test="uinstallations-success-message"
                >
                  <header
                    class="modal-card-head"
                  >
                    <h4
                      class="modal-card-title is-4"
                    >
                      Success
                    </h4>
                    <button
                      aria-label="close"
                      class="delete"
                      data-test="modal-close-button"
                      type="button"
                    />
                  </header>
                  <section
                    class="modal-card-body"
                  >
                    <p>
                      Peter's Properties
                       has been successfully uninstalled
                    </p>
                    <div
                      class="has-text-right"
                    >
                      <button
                        class="button   is-primary "
                        data-test="uinstallations-success-button"
                        type="button"
                      >
                        Back to List
                      </button>
                    </div>
                  </section>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ClientAppUninstallConfirmation renderUninstallConfirmationModalFooter should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class=""
    style=""
  >
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div>
        <div
          class="is-centered buttons mx-auto is-flex"
        >
          <button
            class="button   is-secondary "
            data-test="disagree-btn"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button   is-danger "
            data-test="agree-btn"
            type="button"
          >
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div>
      <div
        class="is-centered buttons mx-auto is-flex"
      >
        <button
          class="button   is-secondary "
          data-test="disagree-btn"
          type="button"
        >
          Cancel
        </button>
        <button
          class="button   is-danger "
          data-test="agree-btn"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ClientAppUninstallConfirmation should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="ant-scrolling-effect"
    style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  >
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
    <div>
      <div
        class="rc-dialog-root"
      >
        <div
          class="rc-dialog-mask"
        />
        <div
          class="rc-dialog-wrap m140lwlu-modal-centered"
          tabindex="-1"
        >
          <div
            aria-labelledby="test-id"
            aria-modal="true"
            class="rc-dialog m36ncwu-modal-container"
            role="dialog"
          >
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
            <div
              class="rc-dialog-content"
            >
              <button
                aria-label="Close"
                class="rc-dialog-close"
                type="button"
              >
                <span
                  aria-label="close"
                  class="delete"
                />
              </button>
              <div
                class="rc-dialog-header"
              >
                <div
                  class="rc-dialog-title"
                  id="test-id"
                >
                  <h4
                    class="modal-card-title is-4 pt-2 pb-2"
                  >
                    Confirm Peter's Properties uninstallation
                  </h4>
                </div>
              </div>
              <div
                class="rc-dialog-body"
              >
                Are you sure you wish to uninstall 
                Peter's Properties
                ? This action will uninstall the app for 
                <b>
                  all
                </b>
                 members of your organisation.
              </div>
              <div
                class="rc-dialog-footer"
              >
                <div
                  class="is-centered buttons mx-auto is-flex"
                >
                  <button
                    class="button   is-secondary "
                    data-test="disagree-btn"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    class="button   is-danger "
                    data-test="agree-btn"
                    type="button"
                  >
                    Confirm
                  </button>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
